--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:server": "tsx server/index.ts",
+    "start:server": "node --loader tsx server/index.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0",
+    "@types/cors": "^2.8.17",
     "@types/chrome": "^0.0.264",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.4",
     "vite": "^5.4.0"
   }
