--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:server": "node --loader tsx server/index.ts"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
     "@supabase/supabase-js": "^2.45.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -20,8 +21,8 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0",
-    "@types/cors": "^2.8.17",
     "@types/chrome": "^0.0.264",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
